# gazebo_padawan

./: start_ws.sh
src/create_draw_circle/: CMakeLists.txt  package.xml
src/create_draw_circle/src/: main.cpp  old_main.cpp
src/create_virtual_wall/: CMakeLists.txt  package.xml
src/create_virtual_wall/launch/: create_house.launch  robot_with_virtual_wall.launch
src/create_virtual_wall/models/two_floors_house_old/: model.sdf
src/create_virtual_wall/models/virtual_wall/: model.sdf
src/create_virtual_wall/src/: virtual_wall.cpp
vm/: Dockerfile  build.sh
